@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -233,11 +233,13 @@ public class IMAPMessage extends MimeMessage implements ReadableMime {
     }
 
     // Return the block size for FETCH requests
+    // MUST be overridden by IMAPNestedMessage
     protected int getFetchBlockSize() {
 	return ((IMAPStore)folder.getStore()).getFetchBlockSize();
     }
 
     // Return the block size for FETCH requests
+    // MUST be overridden by IMAPNestedMessage
     protected boolean ignoreBodyStructureSize() {
 	return ((IMAPStore)folder.getStore()).ignoreBodyStructureSize();
     }
